--- a/src/styles/_placeholder.scss
+++ b/src/styles/_placeholder.scss
@@ -37,6 +37,12 @@
 			outline: 0;
 			border-color: $basicPlaceholder__textColor;
 		}
+
+		&::-ms-clear {
+			display: none;
+			width: 0;
+			height: 0;
+		}
 	}
 
 	// Warning -------------------------------------------------------------- //
