Code style adjustments

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
 /* Colors ----------------------------------------------------*/
-$basicPlaceholder__backgroundColor : #ffffff !default;
+$basicPlaceholder__backgroundColor : white !default;
 $basicPlaceholder__textColor       : rgba(0, 0, 0, .6) !default;
 $basicPlaceholder__borderColor     : rgba(0, 0, 0, .4) !default;
 $basicPlaceholder__errorColor      : #d8000c !default;
